[NO ISSUE][*DB][STO] Cloud, logging misc improvements
Ext-ref: MB-69042,MB-68946
Change-Id: I6b10c08e74e664f1b59ed0df3bf16b871360d66f
Reviewed-on: https://asterix-gerrit.ics.uci.edu/c/asterixdb/+/20504
Reviewed-by: Ali Alsuliman <ali.al.solaiman@gmail.com>
Integration-Tests: Jenkins <jenkins@fulliautomatix.ics.uci.edu>
Tested-by: Jenkins <jenkins@fulliautomatix.ics.uci.edu>
Reviewed-by: Michael Blow <mblow@apache.org>